objects/Apex_Test_Result__c.object
<CustomObject>
    <description>This object stores the results of scheduled Apex Tests executed through Copado Deployer.</description>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failures__c</fullName>
        <label>Failures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <label>Org</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Apex Test Results</relationshipLabel>
        <relationshipName>Apex_Test_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Successes__c</fullName>
        <formula>if(Tests_run__c==0,0,(Tests_run__c-Failures__c)/Tests_run__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Successes (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tests_run__c</fullName>
        <label>Tests run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_time__c</fullName>
        <inlineHelpText>This is the total time taken to run the Apex Tests</inlineHelpText>
        <label>Total time (ms)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Apex Test Result</label>
    <nameField>
        <displayFormat>Test-{0000}</displayFormat>
        <label>Apex Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>